--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev_turbopack": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ag-grid-community/locale": "^33.1.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.15",
+    "ag-grid-react": "^33.1.0",
+    "axios": "^1.7.9",
     "culori": "^4.0.1",
     "daisyui": "^4.12.22",
     "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.2",
-    "next": "15.1.0",
+    "focus-visible": "^5.2.1",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2"
