--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.15",
+    "ag-charts-community": "^11.1.1",
+    "ag-charts-react": "^11.1.1",
     "ag-grid-react": "^33.1.0",
     "axios": "^1.7.9",
     "culori": "^4.0.1",
@@ -24,7 +26,8 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
