--- a/package.json
+++ b/package.json
@@ -18,20 +18,25 @@
     "ag-charts-react": "^11.1.1",
     "ag-grid-react": "^33.1.0",
     "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "culori": "^4.0.1",
     "daisyui": "^4.12.22",
     "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.2",
     "focus-visible": "^5.2.1",
+    "framer-motion": "^12.4.10",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.0.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/culori": "^2.1.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
