--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.0.2",
