--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ag-grid-community/locale": "^33.1.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
