--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "focus-visible": "^5.2.1",
     "framer-motion": "^12.4.10",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.482.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.0",
