--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@marsidev/react-turnstile": "^1.1.0",
+    "@sentry/nextjs": "^9.10.1",
     "@tailwindcss/typography": "^0.5.15",
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
@@ -24,9 +25,9 @@
     "daisyui": "^4.12.22",
     "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.2",
-    "focus-visible": "^5.2.1",
     "framer-motion": "^12.4.10",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "next": "15.1.6",
     "react": "^19.0.0",
