--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.0.2",
     "zustand": "^5.0.3"
   },
