--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
-    "ag-grid-react": "^33.1.0",
+    "ag-grid-community": "33.2.4",
+    "ag-grid-enterprise": "^33.2.4",
+    "ag-grid-react": "33.2.4",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
     "culori": "^4.0.1",
@@ -28,7 +30,7 @@
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
-    "next": "15.1.6",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
