--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.0.2",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
