--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^6.0.2",
     "recharts": "^2.15.3",
     "zustand": "^5.0.3"
