--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.5.2",
     "react-imask": "^7.6.1",
     "react-router-dom": "^6.0.2",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3",
     "zustand": "^5.0.3"
   },
