--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "culori": "^4.0.1",
     "daisyui": "^4.12.22",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
@@ -40,13 +42,14 @@
     "react-router-dom": "^6.0.2",
     "react-select": "^5.10.1",
     "recharts": "^2.15.3",
-    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/culori": "^2.1.1",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
