--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.10",
+    "jose": "^6.0.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "next": "15.2.4",
