--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
+    "form-data": "4.0.4",
     "framer-motion": "^12.4.10",
     "jose": "^6.0.12",
     "jwt-decode": "^4.0.0",
