--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@marsidev/react-turnstile": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/typography": "^0.5.15",
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
@@ -29,10 +30,10 @@
     "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
     "form-data": "4.0.4",
-    "framer-motion": "^12.4.10",
     "jose": "^6.0.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
+    "motion": "^12.23.12",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.0",
