--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ag-grid-community/locale": "^33.1.0",
+    "@google/genai": "^1.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@marsidev/react-turnstile": "^1.1.0",
@@ -41,9 +42,11 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-imask": "^7.6.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.0.2",
     "react-select": "^5.10.1",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
