--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "culori": "^4.0.1",
     "daisyui": "^4.12.22",
     "dayjs": "^1.11.13",
+    "driver.js": "^1.3.6",
     "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
     "focus-trap-react": "^11.0.4",
