--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ag-grid-community/locale": "^33.1.0",
+    "@ag-grid-community/locale": "^33.2.4",
+    "@eslint/plugin-kit": "^0.3.5",
     "@google/genai": "^1.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
@@ -37,6 +38,7 @@
     "lucide-react": "^0.482.0",
     "motion": "^12.23.12",
     "next": "15.2.4",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
@@ -57,6 +59,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -64,6 +67,7 @@
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5"
+    "typescript": "^5",
+    "yarn-audit-fix": "^10.1.1"
   }
 }
