--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
     "ag-grid-community": "33.2.4",
-    "ag-grid-enterprise": "^33.2.4",
+    "ag-grid-enterprise": "33.2.4",
     "ag-grid-react": "33.2.4",
     "axios": "1.11.0",
     "cookies-next": "^5.1.0",
