--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ag-grid-community/locale": "^33.2.4",
+
     "@eslint/plugin-kit": "^0.3.5",
     "@google/genai": "^1.14.0",
     "@headlessui/react": "^2.2.0",
@@ -18,11 +18,12 @@
     "@marsidev/react-turnstile": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/typography": "^0.5.15",
-    "ag-charts-community": "^11.1.1",
-    "ag-charts-react": "^11.1.1",
-    "ag-grid-community": "33.2.4",
-    "ag-grid-enterprise": "^33.2.4",
-    "ag-grid-react": "33.2.4",
+    "@ag-grid-community/locale": "34.1.2",
+    "ag-charts-enterprise": "12.1.2",
+    "ag-charts-react": "12.1.2",
+    "ag-grid-community": "34.1.2",
+    "ag-grid-enterprise": "34.1.2",
+    "ag-grid-react": "34.1.2",
     "axios": "1.11.0",
     "cookies-next": "^5.1.0",
     "culori": "^4.0.1",
